--- a/RandomFactory.csproj
+++ b/RandomFactory.csproj
@@ -65,6 +65,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Styles\Colors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Default.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Text.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -98,6 +110,15 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="Fonts\Inter\Inter-Black.ttf" />
+    <Resource Include="Fonts\Inter\Inter-Bold.ttf" />
+    <Resource Include="Fonts\Inter\Inter-ExtraBold.ttf" />
+    <Resource Include="Fonts\Inter\Inter-ExtraLight.ttf" />
+    <Resource Include="Fonts\Inter\Inter-Light.ttf" />
+    <Resource Include="Fonts\Inter\Inter-Medium.ttf" />
+    <Resource Include="Fonts\Inter\Inter-Regular.ttf" />
+    <Resource Include="Fonts\Inter\Inter-SemiBold.ttf" />
+    <Resource Include="Fonts\Inter\Inter-Thin.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
